# Journal-Prompt-API

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
journal_prompt_api/: __init__.py  journal_prompt_api.py
tests/: test_journal_prompt_api.py
