[tool.poetry]
name = "Journal-Prompt-API"
version = "0.1.0"
description = "An API to deliver pre-written Journal Prompts"
authors = ["Brandon Harrison <brandonharrisoncode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
black = "^22.1.0"
mypy = "^0.931"
isort = "^5.10.1"
vulture = "^2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
